connect-server-dialog: Respect password save setting

The "Remember this password" checkbox was not respected
when password was specified and connection succeeded
for the first time.

https://bugzilla.gnome.org/show_bug.cgi?id=641376